<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_cafe" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        />
    <EditText
        android:id="@+id/EditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_margin="24dp"
        android:hint="@string/user_name"/>
    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:hint="@string/password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/sign"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp" />


</LinearLayout>